--- a/Grape V1 Plots MWE-Copy6.ipynb
+++ b/Grape V1 Plots MWE-Copy6.ipynb
@@ -147,7 +147,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "927bda8651fa4c5580881562011e93e6",
+       "model_id": "b242b8b64c28498d83962e3c6568c55e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -179,13 +179,13 @@
       "Processing data using \"standard\" profile...\n",
       "\n",
       "Resampling data with 1.0 second cadence...\n",
-      "  Resampling Time: 0:00:00.066103\n",
+      "  Resampling Time: 0:00:00.057437\n",
       "dB Conversion\n",
-      "  dB Conversion Time: 0:00:00.003325\n",
+      "  dB Conversion Time: 0:00:00.003295\n",
       "Filtering data with 3.3333 minute low-pass Butterworth filter...\n",
-      "  Filtering Time: 0:00:00.020880\n",
+      "  Filtering Time: 0:00:00.019829\n",
       "\n",
-      "Total Processing Time: 0:00:00.090648\n"
+      "Total Processing Time: 0:00:00.080906\n"
      ]
     }
    ],
@@ -252,9 +252,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e1cfbc815f24b329bf428e2fce24eaa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading Raw Data:   0%|                                                                                       …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "node   = 7\n",
     "freq   = 10e6 # MHz\n",
@@ -263,11 +278,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing data using \"5min_mean\" profile...\n",
+      "\n",
+      "Resampling data with 5.0 minute cadence...\n",
+      "  Resampling Time: 0:00:14.089424\n",
+      "\n",
+      "Total Processing Time: 0:00:14.089922\n"
+     ]
+    }
+   ],
+   "source": [
+    "gd_007.process_data('5min_mean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gd_007.process_data()"
+    "df = gd_007.data['raw']['df']"
    ]
   },
   {
